# party-vote-app24

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
tests/page_objects/: base.py  game_item_page.py  game_page.py  game_results_page.py
tests/unit/: test_game_model.py
tests/unit/web/: conftest.py  test_game_results_route.py  test_get_game_route.py  test_join_game_route.py  test_play_route.py
ui/: package-lock.json  package.json
ui/styles/: main.scss
voting24/db/: database.py  file_database.py  hardcoded_eurovision24_game.py
voting24/game/: game.py  model.py
voting24/web/: app.py  dependencies.py  styles.py  ui.py
voting24/web/routes/: game.py  play.py
voting24/web/templates/: _base.html  _base_game.html  error500.html  game.html  game_item.html  game_results.html
voting24/web/templates/partials/: game_item.html  game_results.html  join_game.html  vote.html
